Fixed admin stuff for the report

--- a/Report/Numerical CW Q1.tex
+++ b/Report/Numerical CW Q1.tex
@@ -1,8 +1,25 @@
 \documentclass[10pt,oneside,a4paper]{article}
 \usepackage{amsmath,amssymb}
+\usepackage{geometry}
+\geometry{
+ a4paper,
+ total={170mm,257mm},
+ left=20mm,
+ top=20mm,
+ } 
 \usepackage{bbm}
 \usepackage{amsfonts}
+\usepackage{graphicx}
+\usepackage{subcaption}
+\usepackage{amssymb}
+\usepackage{fancyhdr} 
+\cfoot{\thepage}
+\pagestyle{fancy} 
+\fancyhf{}
+\fancyhead[LE,RO]{Group 3}
+\fancyhead[RE,LO]{\thepage}
 \DeclareMathOperator{\E}{\mathbb{E}}
+
 
 
 \begin{document}
